<resources>
    <string name="app_name">Shoope2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logo">Logo</string>
    <string name="silahkan_login_untuk_menggunakan_aplikasi">Silahkan Login Untuk Menggunakan Aplikasi Ini</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tv_createacount">Create a New Account</string>
    <string name="developer">Developer</string>
</resources>