<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/logotext"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imglogo"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan_login_untuk_menggunakan_aplikasi"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/tvusername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="@string/hint_username"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:autofillHints="@string/hint_password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_lock"
            android:id="@+id/etPassword"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvusername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_below="@id/btnLogin"
            android:text="@string/tv_createacount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
